feat(konstellation-base): add envFrom with files

--- a/charts/konstellation-base/examples/environments-configmaps-secrets.yaml
+++ b/charts/konstellation-base/examples/environments-configmaps-secrets.yaml
@@ -29,6 +29,12 @@ envFromConfigMap:
     name: "<my-release>-configmap-variable"
     key: "my.var"
 
+envFromFiles:
+  - secretRef:
+      name: secret-name
+  - configMapRef:
+      name: configmap-name
+
 volumes:
   # configmap
   - name: configmap-name
