chore(kdl-server): improve operators
* change files name
* change reference
* enable basic configs

--- a/charts/kdl-server/ci/ci-local.yaml
+++ b/charts/kdl-server/ci/ci-local.yaml
@@ -17,6 +17,10 @@ testConnection:
 env:
   TEST: test
 
+envFromFiles:
+  - secretRef:
+      name: secret-name
+
 secrets:
   - name: secret-name
     data:
@@ -28,7 +32,6 @@ initContainers:
   - name: my-container
     image: busybox
     command: ['sh', '-c', 'echo "Hello, World!"']
-
 
 ingress:
   enabled: true
