--- a/charts/kdl-server/templates/app/configmap.yaml
+++ b/charts/kdl-server/templates/app/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "kdl-server.fullname" . }}
+  name: {{ include "kdl-server.fullname" . }}-server
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "0"
@@ -60,7 +60,7 @@ data:
   KNOWLEDGE_GALAXY_ENABLED: "{{ .Values.knowledgeGalaxy.enabled }}"
 
   ##
-  # User Tools Operator
+  # Project Operator
   PROJECT_MLFLOW_IMG_REPO: "{{ .Values.projectOperator.mlflow.image.repository }}"
   PROJECT_MLFLOW_IMG_TAG: "{{ .Values.projectOperator.mlflow.image.tag }}"
   PROJECT_MLFLOW_IMG_PULLPOLICY: "{{ .Values.projectOperator.mlflow.image.pullPolicy }}"
