--- a/charts/kdl-server/templates/app/hpa.yaml
+++ b/charts/kdl-server/templates/app/hpa.yaml
@@ -2,7 +2,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "kdl-server.fullname" . }}
+  name: {{ include "kdl-server.fullname" . }}-server
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 spec:
