--- a/charts/kdl-server/templates/app/service.yaml
+++ b/charts/kdl-server/templates/app/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kdl-server.fullname" . }}
+  name: {{ include "kdl-server.fullname" . }}-server
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 spec:
