--- a/charts/kdl-server/templates/global/secret.yaml
+++ b/charts/kdl-server/templates/global/secret.yaml
@@ -1,16 +1,15 @@
-{{ if .Values.knowledgeGalaxy.enabled }}
-{{- range .Values.knowledgeGalaxy.secrets }}
+{{- range .Values.global.secrets }}
 ---
 apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: {{ include "kdl-server.fullname" $ }}-{{ .name }}
+  name: {{ include "kdl-server.fullname" $ }}-global-{{ .name }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "0"
   labels:
-    {{- include "kdl-server.knowledgeGalaxyLabels" $ | nindent 4 }}
+    {{- include "kdl-server.labels" $ | nindent 4 }}
 data:
   {{- range $key, $value := .data }}
   {{- if regexMatch "\n" $value }}
@@ -21,4 +20,3 @@ data:
   {{- end }}
   {{- end }}
 {{ end }}
-{{- end }}
