--- a/charts/kdl-server/templates/knowledge-galaxy/deployment.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/deployment.yaml
@@ -1,3 +1,7 @@
+{{- $globalSecrets := .Values.global.imagePullSecrets | default list }}
+{{- $localSecrets := .Values.knowledgeGalaxy.imagePullSecrets | default list }}
+{{- $combinedSecrets := concat $globalSecrets $localSecrets }}
+
 {{ if .Values.knowledgeGalaxy.enabled }}
 apiVersion: apps/v1
 kind: Deployment
@@ -25,8 +29,12 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      {{- if $combinedSecrets }}
       imagePullSecrets:
-        {{- toYaml .Values.knowledgeGalaxy.imagePullSecrets | nindent 8 }}
+        {{- range $combinedSecrets }}
+        - name: {{ .name }}
+        {{- end }}
+      {{- end }}
       serviceAccountName: {{ include "kdl-server.knowledgeGalaxyServiceAccountName" . }}
       securityContext:
         {{- toYaml .Values.knowledgeGalaxy.podSecurityContext | nindent 8 }}
@@ -38,7 +46,11 @@ spec:
         - name: knowledge-galaxy
           securityContext:
             {{- toYaml .Values.knowledgeGalaxy.securityContext | nindent 12 }}
+          {{- if .Values.global.imageRegistry }}
+          image: "{{ .Values.global.imageRegistry }}/{{ .Values.knowledgeGalaxy.image.repository }}:{{ .Values.knowledgeGalaxy.image.tag | default .Chart.AppVersion }}"
+          {{- else }}
           image: "{{ .Values.knowledgeGalaxy.image.repository }}:{{ .Values.knowledgeGalaxy.image.tag | default .Chart.AppVersion }}"
+          {{- end }}
           imagePullPolicy: {{ .Values.knowledgeGalaxy.image.pullPolicy }}
           {{- with .Values.knowledgeGalaxy.command }}
           command: {{- toYaml . | nindent 12 }}
@@ -106,7 +118,10 @@ spec:
           {{- end }}
           envFrom:
             {{- if .Values.envFromFiles }}
-            {{ tpl (toYaml .Values.envFromFiles) . | indent 8 }}
+            {{- tpl (toYaml .Values.envFromFiles) . | nindent 12 }}
+            {{- end }}
+            {{- if .Values.global.envFromFiles }}
+            {{- tpl (toYaml .Values.global.envFromFiles) . | nindent 12 }}
             {{- end }}
           env:
           # TODO: keep legacy backward compatibility
@@ -130,7 +145,6 @@ spec:
           {{- end }}
           {{- end }}
           # Variables from configmap have precedence
-          {{- $envList := dict -}}
           {{- if .Values.knowledgeGalaxy.envFromConfigMap }}
           {{- range $key, $value := .Values.knowledgeGalaxy.envFromConfigMap }}
           {{- if not (hasKey $envList $key) }}
@@ -146,6 +160,42 @@ spec:
           # Add Variables in plain text if they were not already added from secrets
           {{- if .Values.knowledgeGalaxy.env }}
           {{- range $key, $value := .Values.knowledgeGalaxy.env }}
+          {{- if not (hasKey $envList $key) }}
+          - name: {{ $key | upper }}
+            value: {{ $value | quote }}
+          {{- $_ := set $envList $key true }}
+          {{- end }}
+          {{- end }}
+          {{- end }}
+          # Variables global from secrets have precedence
+          {{- if .Values.global.envFromSecrets }}
+          {{- range $key, $value := .Values.global.envFromSecrets }}
+          {{- if not (hasKey $envList $key) }}
+          - name: {{ $key | upper }}
+            valueFrom:
+              secretKeyRef:
+                name: {{ $value.name }}
+                key: {{ $value.key | default $key }}
+          {{- $_ := set $envList $key true }}
+          {{- end }}
+          {{- end }}
+          {{- end }}
+          # Variables global from configmap have precedence
+          {{- if .Values.global.envFromConfigMap }}
+          {{- range $key, $value := .Values.global.envFromConfigMap }}
+          {{- if not (hasKey $envList $key) }}
+          - name: {{ $key | upper }}
+            valueFrom:
+              configMapKeyRef:
+                name: {{ $value.name }}
+                key: {{ $value.key | default $key }}
+          {{- $_ := set $envList $key true }}
+          {{- end }}
+          {{- end }}
+          {{- end }}
+          # Global variables in plain text if they were not already added from secrets
+          {{- if .Values.global.env }}
+          {{- range $key, $value := .Values.global.env }}
           {{- if not (hasKey $envList $key) }}
           - name: {{ $key | upper }}
             value: {{ $value | quote }}
@@ -177,7 +227,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.knowledgeGalaxy.topologySpreadConstraints }}
-      {{- $_ := include "kdl-server.patchTopologySpreadConstraints" $ }}
+      {{- $_ := include "kdl-server.patchTopologySpreadConstraintsKnowledgeGalaxy" $ }}
       topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
