--- a/charts/kdl-server/templates/project-operator/clusterrole-metrics.yaml
+++ b/charts/kdl-server/templates/project-operator/clusterrole-metrics.yaml
@@ -1,9 +1,13 @@
+{{- if and .Values.projectOperator.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: project-operator-metrics-reader
+  name: {{ include "kdl-server.fullname" . }}-project-operator-metrics
+  labels:
+    {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 rules:
 - nonResourceURLs:
   - /metrics
   verbs:
   - get
+{{- end }}
