--- a/charts/kdl-server/templates/project-operator/clusterrole-proxy.yaml
+++ b/charts/kdl-server/templates/project-operator/clusterrole-proxy.yaml
@@ -1,7 +1,10 @@
+{{- if and .Values.projectOperator.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: project-operator-proxy-role
+  name: {{ include "kdl-server.fullname" . }}-project-operator-proxy
+  labels:
+    {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 rules:
 - apiGroups:
   - authentication.k8s.io
@@ -15,3 +18,4 @@ rules:
   - subjectaccessreviews
   verbs:
   - create
+{{- end }}
