--- a/charts/kdl-server/templates/project-operator/serviceaccount.yaml
+++ b/charts/kdl-server/templates/project-operator/serviceaccount.yaml
@@ -1,5 +1,13 @@
+{{ if and .Values.projectOperator.enabled .Values.projectOperator.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: project-operator-controller-manager
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "kdl-server.projectOperatorServiceAccountName" . }}
+  labels:
+    {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
+  {{- with .Values.projectOperator.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+automountServiceAccountToken: {{ .Values.projectOperator.serviceAccount.automount | default "false" }}
+{{- end }}
