--- a/charts/kdl-server/templates/tests/test-connection.yaml
+++ b/charts/kdl-server/templates/tests/test-connection.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "konstellation-base.fullname" . }}-test-connection"
+  name: "{{ include "kdl-server.fullname" . }}-test-connection"
   labels:
-    {{- include "konstellation-base.labels" . | nindent 4 }}
+    {{- include "kdl-server.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -12,6 +12,6 @@ spec:
     - name: wget
       image: "{{ .Values.testConnection.repository }}:{{ .Values.testConnection.tag | default "latest" }}"
       command: ['wget']
-      args: ['{{ include "konstellation-base.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "kdl-server.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
 {{ end }}
