fix: rename pvc

--- a/charts/kdl-server/templates/shared-volume/pvc.yml
+++ b/charts/kdl-server/templates/shared-volume/pvc.yml
@@ -1,6 +1,6 @@
 {{- if .Values.sharedVolume.enabled }}
 apiVersion: v1
-kind: sharedVolumeClaim
+kind: PersistentVolumeClaim
 metadata:
   {{- if .Values.sharedVolume.name }}
   name: {{ .Values.sharedVolume.name }}-claim
