fix: mitigate warnings

--- a/charts/kdl-server/values.yaml
+++ b/charts/kdl-server/values.yaml
@@ -1525,8 +1525,7 @@ projectOperator:
   # -- Defines privilege and access control settings for a Pod
   # </br> Ref: https://kubernetes.io/docs/concepts/security/pod-security-standards/
   # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
-  podSecurityContext:
-    allowPrivilegeEscalation: false
+  podSecurityContext: {}
     # fsGroup: 2000
 
   # -- Defines privilege and access control settings for a Container
@@ -1537,6 +1536,7 @@ projectOperator:
     #   drop:
     #   - ALL
     # readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
     runAsNonRoot: true
     # runAsUser: 1000
 
