--- a/.github/workflows/helm-lint-test.yml
+++ b/.github/workflows/helm-lint-test.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       # default install latest (stable)
       - name: Set up Helm
@@ -30,14 +31,14 @@ jobs:
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
-          changed=$(ct list-changed --config .github/ct.yaml)
+          changed=$(ct list-changed --config .github/ct.yml)
           if [[ -n "${changed}" ]]; then
             echo "changed=true" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Run ct lint
         if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        run: ct lint --config .github/ct.yaml --lint-conf .github/helmlintconf.yaml
+        run: ct lint --config .github/ct.yml --lint-conf .github/helmlintconf.yaml
 
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
@@ -45,8 +46,8 @@ jobs:
 
       - name: Run ct install
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct install --config .github/ct.yaml --helm-extra-args '--timeout 900s --debug'
+        run: ct install --config .github/ct.yml --helm-extra-args '--timeout 900s --debug'
 
       - name: (workflow_dispatch) Run ct install
         if: github.event_name == 'workflow_dispatch'
-        run: ct install --config .github/ct.yaml --helm-extra-args '--timeout 900s --debug' --all
+        run: ct install --config .github/ct.yml --helm-extra-args '--timeout 900s --debug' --all
