--- a/charts/kdl-server/templates/app/configmap.yaml
+++ b/charts/kdl-server/templates/app/configmap.yaml
@@ -3,8 +3,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "kdl-server.fullname" . }}-server
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "0"
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "0"
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 data:
