--- a/charts/kdl-server/templates/global/configmap.yaml
+++ b/charts/kdl-server/templates/global/configmap.yaml
@@ -5,8 +5,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "kdl-server.fullname" $ }}-global-{{ .name }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "0"
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "0"
   labels:
     {{- include "kdl-server.labels" $ | nindent 4 }}
 data:
