--- a/charts/kdl-server/templates/knowledge-galaxy/configmap.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/configmap.yaml
@@ -4,8 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "kdl-server.fullname" . }}-knowledge-galaxy
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "0"
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "0"
   labels:
     {{- include "kdl-server.knowledgeGalaxyLabels" . | nindent 4 }}
 data:
