--- a/charts/konstellation-base/templates/configmap.yaml
+++ b/charts/konstellation-base/templates/configmap.yaml
@@ -5,8 +5,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "konstellation-base.fullname" $ }}-{{ .name }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "0"
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "0"
   labels:
     {{- include "konstellation-base.labels" $ | nindent 4 }}
 data:
