--- a/charts/konstellation-base/templates/deployment.yaml
+++ b/charts/konstellation-base/templates/deployment.yaml
@@ -109,43 +109,43 @@ spec:
             {{- tpl (toYaml .Values.envFromFiles) . | nindent 12 }}
           {{- end }}
           env:
-          # Variables from secrets have precedence
-          {{- $envList := dict -}}
-          {{- if .Values.envFromSecrets }}
-          {{- range $key, $value := .Values.envFromSecrets }}
-          {{- if not (hasKey $envList $key) }}
-          - name: {{ $key | upper }}
-            valueFrom:
-              secretKeyRef:
-                name: {{ $value.name }}
-                key: {{ $value.key | default $key }}
-          {{- $_ := set $envList $key true }}
-          {{- end }}
-          {{- end }}
-          {{- end }}
-          # Variables from configmap have precedence
-          {{- if .Values.envFromConfigMap }}
-          {{- range $key, $value := .Values.envFromConfigMap }}
-          {{- if not (hasKey $envList $key) }}
-          - name: {{ $key | upper }}
-            valueFrom:
-              configMapKeyRef:
-                name: {{ $value.name }}
-                key: {{ $value.key | default $key }}
-          {{- $_ := set $envList $key true }}
-          {{- end }}
-          {{- end }}
-          {{- end }}
-          # Add Variables in plain text if they were not already added from secrets
-          {{- if .Values.env }}
-          {{- range $key, $value := .Values.env }}
-          {{- if not (hasKey $envList $key) }}
-          - name: {{ $key | upper }}
-            value: {{ $value | quote }}
-          {{- $_ := set $envList $key true }}
-          {{- end }}
-          {{- end }}
-          {{- end }}
+            # Variables from secrets have precedence
+            {{- $envList := dict -}}
+            {{- if .Values.envFromSecrets }}
+            {{- range $key, $value := .Values.envFromSecrets }}
+            {{- if not (hasKey $envList $key) }}
+            - name: {{ $key | upper }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $value.name }}
+                  key: {{ $value.key | default $key }}
+            {{- $_ := set $envList $key true }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
+            # Variables from configmap have precedence
+            {{- if .Values.envFromConfigMap }}
+            {{- range $key, $value := .Values.envFromConfigMap }}
+            {{- if not (hasKey $envList $key) }}
+            - name: {{ $key | upper }}
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ $value.name }}
+                  key: {{ $value.key | default $key }}
+            {{- $_ := set $envList $key true }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
+            # Variables in plain text if they were not already added from secrets
+            {{- if .Values.env }}
+            {{- range $key, $value := .Values.env }}
+            {{- if not (hasKey $envList $key) }}
+            - name: {{ $key | upper }}
+              value: {{ $value | quote }}
+            {{- $_ := set $envList $key true }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
