--- a/charts/konstellation-base/templates/secret.yaml
+++ b/charts/konstellation-base/templates/secret.yaml
@@ -6,8 +6,8 @@ type: Opaque
 metadata:
   name: {{ include "konstellation-base.fullname" $ }}-{{ .name }}
   annotations:
-    "helm.sh/hook": "pre-install,pre-upgrade"
-    "helm.sh/hook-weight": "0"
+    helm.sh/hook: "pre-install,pre-upgrade"
+    helm.sh/hook-weight: "0"
   labels:
     {{- include "konstellation-base.labels" $ | nindent 4 }}
 data:
