--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,22 @@ repos:
     - id: check-merge-conflict
     - id: check-symlinks
     - id: end-of-file-fixer
+
 - repo: https://github.com/zricethezav/gitleaks
-  rev: v8.21.1
+  rev: v8.21.2
   hooks:
     - id: gitleaks
+
+- repo: https://github.com/gruntwork-io/pre-commit
+  rev: v0.1.24
+  hooks:
+    - id: helmlint
+
 - repo: https://github.com/norwoodj/helm-docs
   rev: v1.14.2
   hooks:
     - id: helm-docs
       args:
-        - --chart-search-root=./helm/kdl-server
-        - --template-files=CHART.md.gotmpl
-        - --output-file=CHART.md
+        - --chart-search-root=charts
+        - --template-files=README.md.gotmpl
+        - --output-file=README.md
