--- a/charts/kdl-server/templates/server/pdb.yaml
+++ b/charts/kdl-server/templates/server/pdb.yaml
@@ -2,7 +2,7 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-server
+  name: {{ include "kdl-server.server.name" . }}
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 spec:
