--- a/charts/kdl-server/templates/server/role.yaml
+++ b/charts/kdl-server/templates/server/role.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-server
+  name: {{ include "kdl-server.server.name" . }}
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 rules:
@@ -24,3 +25,4 @@ rules:
     - "usertools"
     verbs:
     - '*'
+{{- end }}
