--- a/charts/kdl-server/templates/server/rolebinding.yaml
+++ b/charts/kdl-server/templates/server/rolebinding.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-server
+  name: {{ include "kdl-server.server.name" . }}
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 subjects:
@@ -9,5 +10,6 @@ subjects:
   name: {{ include "kdl-server.kdlServerServiceAccountName" . }}
 roleRef:
   kind: Role
-  name: {{ include "kdl-server.fullname" . }}-server
+  name: {{ include "kdl-server.server.name" . }}
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
