--- a/charts/kdl-server/templates/knowledge-galaxy/networkpolicy.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/networkpolicy.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-knowledge-galaxy
+  name: {{ include "kdl-server.knowledge-galaxy.name" . }}
   labels:
     {{- include "opencti.knowledgeGalaxyLabels" . | nindent 4 }}
 spec:
