--- a/charts/kdl-server/templates/knowledge-galaxy/pdb.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/pdb.yaml
@@ -2,7 +2,7 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-knowledge-galaxy
+  name: {{ include "kdl-server.knowledge-galaxy.name" . }}
   labels:
     {{- include "kdl-server.knowledgeGalaxyLabels" . | nindent 4 }}
 spec:
