--- a/charts/kdl-server/templates/project-operator/clusterrole-metrics.yaml
+++ b/charts/kdl-server/templates/project-operator/clusterrole-metrics.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-project-operator-metrics
+  name: {{ include "kdl-server.project-operator.name" . }}-metrics
   labels:
     {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 rules:
