--- a/charts/kdl-server/templates/project-operator/clusterrolebinding-proxy.yaml
+++ b/charts/kdl-server/templates/project-operator/clusterrolebinding-proxy.yaml
@@ -2,13 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-project-operator-proxy
+  name: {{ include "kdl-server.project-operator.name" . }}-proxy
   labels:
     {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "kdl-server.fullname" . }}-project-operator-proxy
+  name: {{ include "kdl-server.project-operator.name" . }}-proxy
 subjects:
 - kind: ServiceAccount
   name: {{ include "kdl-server.projectOperatorServiceAccountName" . }}
