--- a/charts/kdl-server/templates/project-operator/role-leader-election.yaml
+++ b/charts/kdl-server/templates/project-operator/role-leader-election.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-project-operator-leader-election
+  name: {{ include "kdl-server.project-operator.name" . }}-leader-election
   labels:
     {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 rules:
