--- a/charts/kdl-server/templates/project-operator/rolebinding-leader-election.yaml
+++ b/charts/kdl-server/templates/project-operator/rolebinding-leader-election.yaml
@@ -2,13 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-project-operator-leader-election
+  name: {{ include "kdl-server.project-operator.name" . }}-leader-election
   labels:
     {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "kdl-server.fullname" . }}-project-operator-leader-election
+  name: {{ include "kdl-server.project-operator.name" . }}-leader-election
 subjects:
 - kind: ServiceAccount
   name: {{ include "kdl-server.projectOperatorServiceAccountName" . }}
