--- a/charts/kdl-server/templates/project-operator/service.yaml
+++ b/charts/kdl-server/templates/project-operator/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-project-operator
+  name: {{ include "kdl-server.project-operator.name" . }}
   labels:
     {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 spec:
